Apply suggestions from code review
Co-authored-by: Alexander Schmidt <alexander.schmidt@forspace-solutions.com>